# pyfiveoneone

./: .gitignore  README.md  historical_caltrain.py  pyproject.toml
scripts/: autogen_models.py  fetch_model_data.py
src/pyfiveoneone/: __init__.py  client.py  main.py  models.py  utils.py
src/pyfiveoneone/autogenerated/: calendarattributes.py  directions.py  routes.py  stops.py  trips.py
