[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project]
name = "pyfiveoneone"
version = "0.1.0"
description = "Thin Python client helpers for 511 Transit (SFBay)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Nicholas Krstevski" }
]
dependencies = [
  "requests",
  "gtfs-realtime-bindings", 
  "pandas"
]

[project.urls]
Homepage = "https://github.com/nicholaskrstevski/pyfiveoneone"
Source = "https://github.com/nicholaskrstevski/pyfiveoneone"

 

